<resources>
    <string name="app_name">Streak</string>
    <string name="streaks_title">Streaks</string>
    <string name="more_options">More options</string>
    <string name="add_new_streak">Add new streak</string>
    <string name="days_unit">d</string>
    <string name="hours_unit">h</string>
    <string name="minutes_unit">m</string>
    <string name="seconds_unit">s</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus.
    </string>

    <!-- Add Streak Dialog -->
    <string name="add_streak_title">Add New Streak</string>
    <string name="add_streak_hint">Activity Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!-- Reset Dialog -->
    <string name="reset_title">Reset Timer</string>
    <string name="reset_message">Are you sure you want to reset the timer for %1$s?</string>
    <string name="reset">Reset</string>

    <!-- Delete Dialog -->
    <string name="delete_title">Delete Streak</string>
    <string name="delete_message">Are you sure you want to delete the streak "%1$s"?</string>
    <string name="delete">Delete</string>

    <!-- Pause/Resume Dialog -->
    <string name="pause_title">Pause Timer</string>
    <string name="pause_message">Are you sure you want to pause the timer for %1$s?</string>
    <string name="resume_title">Resume Timer</string>
    <string name="resume_message">Are you sure you want to resume the timer for %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Font references -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <!-- New string resources for streak type selection dialog -->
    <string name="select_streak_type">Select Streak Type</string>
    <string name="timer_streak">Timer Streak</string>
    <string name="counter_streak">Counter Streak</string>

    <!-- New string resources for custom add/retract dialogs for counter streaks -->
    <string name="custom_add_title">Add Custom Amount</string>
    <string name="custom_retract_title">Retract Custom Amount</string>
    <string name="retract">Retract</string>

    <!-- New string resources for gesture hints -->
    <string name="swipe_left_hint">Decrease counter value</string>
    <string name="swipe_right_hint">Increase counter value</string>

    <!-- New string resources for counter options -->
    <string name="counter_options">Counter Options</string>
</resources>